fixes overflow

--- a/src/components/Graphic/Graphic.css
+++ b/src/components/Graphic/Graphic.css
@@ -128,7 +128,7 @@
   right: -6rem;
   z-index: -10;
 }
-@media only screen and (min-width: 320px) and (max-width: 376px) {
+@media only screen and (min-width: 320px) and (max-width: 431px) {
   .elipse_left {
     display: none;
   }
