--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -93,10 +93,10 @@
   width: fit-content;
   margin: 0 auto;
 }
-@media only screen and (min-width: 320px) and (max-width: 376px) {
+@media only screen and (min-width: 320px) and (max-width: 431px) {
   .og_container {
     margin-top: 2.19rem;
-    padding: 0 1rem;
+    padding: 0 3vw;
     margin-bottom: 3.75rem;
   }
   .og_header_container {
